# home

./: .buildinfo  .gitallowed  .gitignore  .gitmodules  .markdownlint.json  .sops.yaml  AGENTS_OPENAI_CODEX_CLOUD.md  AI_FIRST_HOMELAB_ARCHITECTURE.md  AI_FIRST_HOMELAB_FINAL.md  CLAUDE.md  GITHUB_ISSUES_CODE_REVIEW.md  IMPLEMENTATION_SUMMARY.md  NEXT_SESSION_TASKS.md  PROJECTS.md  README.md  VALIDATION_REPORT.md  diff.txt  docker-compose.yml  genindex.html  homeiac.html  index.html  k8s_talk_proposal.md  magicmirror.html  objects.inv  refactor_proxmox.patch  search.html  searchindex.js
.github/workflows/: balena_cloud_push.yml  build-frigate-webhook.yaml  build-ollama-scripts.yaml  build-pve-nut.yaml  deploy_to_github.yml  docs.yml  frigate-health-checker.yml  proxmox-provisioner.yml
_sources/: homeiac.rst.txt  index.rst.txt
apps/frigate-health-checker/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/frigate-health-checker/src/frigate_health_checker/: __init__.py  cli.py  config.py  health_checker.py  kubernetes_client.py  models.py  notifier.py
apps/frigate-health-checker/tests/: __init__.py  conftest.py  test_config.py  test_health_checker.py  test_integration.py  test_models.py  test_notifier.py
docs/: Makefile  backup-restore-runbook.md  crucible-deployment-runbook.md  crucible-ma90-deployment-complete.md  crucible-proxmox-nbd-integration-guide.md  ma90-crucible-deployment-complete-guide.md  ma90-disk-isolation-analysis.md  ma90-maas-custom-storage-deployment.md  make.bat  pbs-migration-status-2025-01-22.md  requirements.txt  review-homelab-infrastructure-2025-01.md  secret-management.md
docs/architecture/: claude-code-ambient-ai-testing.md  claude-code-ambient-ai.md  reolink-doorbell-network.md  storage-architecture.md  use-method-design.md  use-method-incident-flow.md  (+2 more)
esp32-status-puck/: .gitignore  LED_INTEGRATION.md  README.md  led_comet.cpp  led_comet.h  pomodoro_ui.cpp
esp32-status-puck/firmware/: RUNBOOK.md  platformio.ini  pyproject.toml
esp32-status-puck/firmware/include/: app_framework.h  config.h.example  lv_conf.h
esp32-status-puck/firmware/src/: main.cpp
esp32-status-puck/firmware/test/: test_encoder_handler.cpp  test_state_manager.cpp  test_status_parser.cpp
features/: failure_handling.feature  p0_ask_claude.feature  p0_task_notifications.feature  p1_glanceable_status.feature  p1_proactive_briefing.feature  p2_unknown_person.feature
k8s/: Traefik3-1589178134055.json  cloudflare-ddns-deployment.yaml  grafana-tls-ingress.yaml  le-issuer-prod.yaml  le-test-certificate.yaml  letsencrypt-issuer-prod.yaml  letsencrypt-issuer-staging.yaml  monitoring-values.yaml  mysite.yaml  ollama-gpu-server.yaml  prometheus-with-raspberrypi-and-traefik-pc-targets-for-configmap.yaml  prometheus-with-raspberrypi-and-traefik-targets-for-configmap.yaml
proxmox/: README.md  README_Cloudflare_Tunnel_Recovery_Guide.md  README_upload_iso.md  apply-exporters.py  apply-exporters.sh  current_setup_ceph.sh  exporter-desired.sh  gather_system_info.sh  inventory.txt  my-changes.sh  proxmox_hosts.conf  setup_ceph_with_some_functions.sh  uninstall_ceph.sh  wifi_routing.md
proxmox/homelab/: .env.example  ORCHESTRATION_README.md  README.md  README_CORAL_AUTOMATION.md  add_uptime_kuma_maas_devices.py  debug_auth.py  debug_monitor_format.py  orchestrate_homelab.py  pyproject.toml  test_env_loading.py  test_login_callback.py  test_monitor_format.py  test_orchestrator.py  test_uptime_kuma.py  update_monitors.py  uptime_kuma_simple.py
proxmox/homelab/config/: cluster.yaml  homelab.yaml  k3s.yaml  pbs-storage.yaml
proxmox/homelab/docs/: PBS_STORAGE_MANAGEMENT.md  k3s-ssh-management.md
proxmox/homelab/scripts/: 45-ma90-multi-zfs-layout-fixed.sh  README-ma90-crucible.md  create_still_fawn_vm_manual.sh  delete_vm.py  deploy_uptime_kuma.sh  distribute_img.py  distribute_img_and_customized_snippets.py  distribute_img_snippets.py  metallb-smoketest.sh  provision_vms_only.py  remote_executor.py  ssh_pve_ls.sh  sync_coral_automation.sh  tune-k3s-vm.sh
proxmox/homelab/snippets/: install-k3sup-qemu-agent.yaml
proxmox/homelab/src/homelab/: cli.py  cluster_manager.py  config.py  coral_automation.py  coral_config.py  coral_detection.py  coral_initialization.py  coral_models.py  crucible_config.py  crucible_mock.py  development_manager.py  enhanced_vm_manager.py  gpu_passthrough_manager.py  health_checker.py  homelab_cli.py  infrastructure_orchestrator.py  iso_manager.py  k3s_manager.py  k3s_migration_manager.py  k3s_ssh_manager.py  main.py  monitoring_manager.py  node_exporter_manager.py  oxide_storage_api.py  pbs_cli.py  pbs_storage_manager.py  prometheus_targets.py  proxmox_api.py  pumped_piglet_migration.py  pve.maas-ca.pem  resource_manager.py  storage_manager.py  unified_infrastructure_manager.py  uptime_kuma_client.py  vm_manager.py  zfs_exporter_manager.py  zfs_mirror_manager.py
proxmox/homelab/tests/: __init__.py  conftest.py  coral_fixtures.py  test_config.py  test_coral_automation.py  test_coral_config.py  test_coral_detection.py  test_coral_initialization.py  test_coral_models.py  test_crucible_integration.py  test_gpu_passthrough_manager.py  test_health_checker.py  test_infrastructure_orchestrator.py  test_iso_manager.py  test_k3s_manager.py  test_main.py  test_monitoring_manager.py  test_orchestrate_homelab.py  test_pbs_storage_manager.py  test_prometheus_targets.py  test_proxmox_api.py  test_resource_manager.py  test_storage_manager.py  test_uptime_kuma_client.py  test_vm_manager.py  test_zfs_exporter_manager.py  test_zfs_mirror_manager.py
raspberrypi-master/: zfs-exporter.service
schemas/: claude-command.schema.json  claude-notification.schema.json  claude-status.schema.json  claude-task.schema.json  presence-detected.schema.json
scripts/: INDEX.md  clock-ca.py  fix_llmvision.sh  flint3_network_snapshot.sh  flint3_verify_vlans.sh  generate-readme.sh  install_luma.led_matrix.sh  migrate_backup_storage.sh  monitor-pad-memory.sh  monitor-pad-training.sh  mysevensegment_test.py  ollama_benchmark.sh  score-board.py  setup-git-secrets-allowed.sh
(+1261 files in other folders)
