[tool.poetry]
name = "frigate-health-checker"
version = "1.0.0"
description = "Health checker for Frigate NVR with automatic restart capability"
authors = ["homeiac <noreply@github.com>"]
readme = "README.md"
packages = [{include = "frigate_health_checker", from = "src"}]

[tool.poetry.scripts]
frigate-health-checker = "frigate_health_checker.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "^31.0.0"
requests = "^2.32.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.0"
mypy = "^1.14.0"
ruff = "^0.9.0"
responses = "^0.25.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=frigate_health_checker --cov-report=term-missing --cov-report=xml"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/frigate_health_checker"]
branch = true

[tool.coverage.report]
fail_under = 65
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
