[tool.poetry]
name = "homelab"
version = "0.1.0"
description = ""
authors = ["Kumar Gopal <kumar.gopal@bd.com>"]
readme = "README.md"
packages = [{include = "homelab", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
proxmoxer = "^2.2.0"
requests = "^2.32.3"
dotenv = "^0.9.9"
paramiko = "^3.5.1"
python-dotenv = "^1.1.0"
requests-toolbelt = "^1.0.0"
pyudev = "^0.24.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
